--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div>
 				<ul class="nav-list">
 					<li>
-						<a href="index3.html">Home</a>
+						<a href="index.html">Home</a>
 					</li>
 					<li>
 						<a href="articles.html">Articles</a>
@@ -99,11 +99,11 @@
 						<h4 class="f3 fw4 i lh-title mt0">Writings, photos, videos</h4>
 					</header>
 					<section class="pt5 pb4">
-						<p class="lh-copy measure f4 mt0">I hope you enjoy my work. I built this site as a side project after learning CSS and HTML from Brady Teufel. Components have been borrowed from Tachyons.io, and fancybox3.<br>
+						<p class="lh-copy measure f4 mt0">I hope you see how I fit into your workspace. I built this site as a side project after learning CSS and HTML from Brady Teufel at Cal Poly, San Luis Obispo. Components have been borrowed from Tachyons.io, and fancybox3.<br>
 						<br>
-						I am a journalism major at Cal Poly San Luis Obispo, where I have been writing for the student newspaper for the two years, taking my own photographs for six months, and using After Effects, Premiere, InDesign, and Illustrator for intermittent stretches of time.<br>
+						I am a journalism major at Cal Poly, where I have been writing for the student newspaper for the past two years, taking my own photographs for six months, and using After Effects, Premiere, InDesign, and Illustrator for intermittent stretches of time.<br>
 						<br>
-						I hope you enjoy my work, and that this site shows you what I am made of.<br>
+						I hope you enjoy my work, and that this site shows you what I can contribute to your team.<br>
 						<br>
 						Stay connected through the platforms I linked to at the bottom.</p>
 					</section>
