--- a/resume.html
+++ b/resume.html
@@ -65,7 +65,7 @@ $('#slider').cycle({});
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
         <li>
-          <a href="index3.html">Home</a>
+          <a href="index.html">Home</a>
         </li>
 	   <li>
           <a href="articles.html">Articles</a>
