--- a/home.html
+++ b/home.html
@@ -202,6 +202,13 @@
 </article>
     </section>
 
+    <section class="row mw7 center">
+                    <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="multimedia.html">Multimedia</a></h1>
+      <div class="flex flex-column flex-row video-wrapper">
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ZjFDwSWWtYI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+           </div>
+        
+    </section>
 
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
 <footer class="tc-l bg-center cover">
