--- a/multimedia.html
+++ b/multimedia.html
@@ -135,9 +135,9 @@ data-cycle-speed="200">
 
 <h3 id="vid">Donna</h3>
 <article>
-<p class="tab">This is Donna, a local band I interviewed after a concert at Cal Poly about the technical side of music.</p>	
+<p class="tab">This is Donna, a local band I interviewed about the technical side of music.</p>	
     <div class="flex flex-column flex-row video-wrapper">
-    <iframe  width="560" height="315" src="https://www.youtube.com/embed/j3DXsW9K01c?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe  class="video" width="560" height="315" src="https://www.youtube.com/embed/j3DXsW9K01c?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
            </div>
 </article>
 
