--- a/home.html
+++ b/home.html
@@ -202,12 +202,14 @@
 </article>
     </section>
 
+	
     <section class="row mw7 center">
+	    <article class="cf ph3 ph5-ns pv5">
                     <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="multimedia.html">Multimedia</a></h1>
       <div class="flex flex-column flex-row video-wrapper">
     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ZjFDwSWWtYI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
            </div>
-        
+	    </article>
     </section>
 
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
