--- a/home.html
+++ b/home.html
@@ -87,8 +87,8 @@
 		<br>
 		<!--Full Bleed Background-->
 		<article data-name="article-full-bleed-background">
-			<div class="cf" style="background: url(https://images.fok.al/content/wysKdOOqzEcZ?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max) no-repeat center center fixed; background-size: cover;">
-				<div class="fl pa3 pa4-ns bg-grey measure-narrow f3">
+			<div class="cf" style="background: url(img/aidan2.pjg) no-repeat center center fixed; background-size: cover;">
+				<div class="fr pa3 pa4-ns bg-grey measure-narrow f3">
 					<header class="bb pv4">
 						<h2 class="f2 fw7 ttu tracked lh-title mt0 mb3">Welcome to my site</h2>
 						<h4 class="f3 fw4 i lh-title mt0">Writings, photos, videos</h4>
