--- a/media_basics.html
+++ b/media_basics.html
@@ -87,25 +87,34 @@
 
 		
 
-<article >
-  <div class="vh-100 dt w-100 tc bg-dark-gray white cover" style="background:url(http://mrmrs.github.io/photos/u/009.jpg) no-repeat center;">
-    <div class="dtc v-mid">
-      <header class="white-70">
-        <h2 class="f6 fw1 ttu tracked mb2 lh-title"></h2>
-        <h3 class="f6 fw1 lh-title"></h3>
-      </header>
-      <h1 class="f1 f-headline-l fw1 i white-60">Hey Wait a Second</h1>
-      <blockquote class="ph0 mh0 measure f4 lh-copy center">
-        <p class="fw1 white-70">
-          This page isn't due yet!.
-        </p>
-        <cite class="f6 ttu tracked fs-normal">Check back in a week or so.</cite>
-      </blockquote>
+<article class="pa3 pa5-ns">
+  <h1 class="f2">Media basics</h1>
+  <img src="http://tachyons.io/img/space.jpg" class="w-100 f5 " alt="Photo of outer space">
+  <p class=" lh-copy">
+    Cambodia is first a television-based news industry. According to the Media Ownership Monitor, 96 percent of Cambodians see television before advertising at 92 percent, billboards at 88 percent, posters 83 percent, the Internet 39 percent, and road signs 37 percent. Radio comes in at 35 percent, and print and newspapers do not even have a number assigned to them.
+  </p>
+  <p class=" lh-copy">
+   63 percent of the tv viewership was owned by politically affiliated owners, the largest of which is  Prime Minister Hun Sen's daughter, Hun Mana. The rest of the ownership is from out of country nationals. With the top four television owners reaching 78 percent of the market, there is little diversity of opinion. 
+  </p>
+      <p class=" lh-copy">
+  The MOM continues to say that the two news channels only take up 2 percent of the television viewership, with the rest focusing on entertainment, which is why so many more Cambodians are recorded as watching television opposed to other forms of media.90 percent of Cambodians say they never read a newspaper, leaving the 65 thousand copies distributed in print to be read by a small number of politicians and outsiders.
+  </p>
+      <p class=" lh-copy">
+The majority of Cambodians rely on cell phones, according to the CIA World Factbook, due to a lack of phone lines in the country. There are 125 cell phone subscriptions per 100 inhabitants, for a total of 20 million cell phones in the country. Compare that to 230 thousand land lines. Telecom companies are being warned by the government to pay outstanding debts, The Phnom Pen Post reports, at the same time that newspapers and radio stations are told they are missing back taxes. It could be a strategic move for the government to break communication in time for the election in the summer, if they close the companies for not paying up. The Post says the government has been claiming lost revenue from telecommunication companies since the early 2000s.
+  </p>
+      <p class=" lh-copy">
+Facebook is a large resource for news, according to a report from Reporters Without Borders(RSF). The World Factbook says 4 million Cambodians used the internet in 2016, comprising a quarter of the population, and both citizen-journalists and political leaders have taken to it. RSF said social media overtook television last year as the leading source of news. Their statistics said 30 perecent of Cambodians get their news from Facebook as opposed to 29 percent for television. 
+  </p>
+      <p class=" lh-copy">
+Hun Sen is the eighth most followed world leader on Facebook, but despite that it is seen as a vehicle for the dissenting voice. 52 percent of television viewers and 20 percent of Facebook viewers said they would vote for the ruling party, Shaviv Strategy & Campaigns reports, and 28 percent of television viewers and 56 percent of Facebook viewers said they would vote for the opposition.
+  </p>
+      <p class=" lh-copy">
+   Luon Sovath is a popular citizen journalist and Buddhist monk. He has 9 thousand Facebook followers, 32 thousand Youtube subscribers, and 1.5 thousand videos posted on his channel. He uses a smartphone for his videos, and is always dressed in the Buddhist orange robe. According to a bio from a film festival, he believes that being a human rights activist and recording the governemnt's actions are on the path to enlightenment.
+  </p>
+      
+</article>
     </div>
-  </div>
-</article></div>
-
- 
+    </body>
 	<!--the following script controls the responsive navigation-->
 	<script>
 	   (function($) { // Begin jQuery
@@ -147,5 +156,5 @@
 	   }
 	}
 	</script>
-</body>
+
 </html>
