--- a/media_basics.html
+++ b/media_basics.html
@@ -89,7 +89,7 @@
 
 <article class="pa3 pa5-ns">
   <h1 class="f2">Media basics</h1>
-  <img src="http://tachyons.io/img/space.jpg" class="w-100 f5 " alt="Photo of outer space">
+ <----- <img src="http://tachyons.io/img/space.jpg" class="w-100 f5 " alt="Photo of outer space">----->
   <p class=" lh-copy">
     Cambodia is first a television-based news industry. According to the Media Ownership Monitor, 96 percent of Cambodians see television before advertising at 92 percent, billboards at 88 percent, posters 83 percent, the Internet 39 percent, and road signs 37 percent. Radio comes in at 35 percent, and print and newspapers do not even have a number assigned to them.
   </p>
