--- a/multimedia.html
+++ b/multimedia.html
@@ -149,7 +149,7 @@ data-cycle-speed="200">
        
 
     <h3>Donna</h3>
-<p>This is Donna, a local band I interviewed about the technical side of music, for a class assignment. I made the lower third in After Effects.</p>	
+<p>This is Donna, a local band I interviewed about the technical side of music for a class assignment. I made the lower third in After Effects.</p>	
     <div class="flex flex-column flex-row video-wrapper">
     <iframe  class="video" width="560" height="315" src="https://www.youtube.com/embed/j3DXsW9K01c?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
            </div>
