--- a/articles.html
+++ b/articles.html
@@ -27,6 +27,7 @@
 	
 <!--The following code links to Google Fonts-->
 <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     
 <!---Tachyons---> 
 <link rel="stylesheet" href="https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css"/>
