--- a/home.html
+++ b/home.html
@@ -12,7 +12,9 @@
 	</script><!--The following code is for the slideshow -->
 	<script src="js/jquery.cycle2.min.js" type="text/javascript">
 	</script><!--The following code links to Google Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet"><!---Tachyons   =-->
+	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond|Proza+Libre" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<!---Tachyons   =-->
 	<link href="https://unpkg.com/tachyons@4.9.1/css/tachyons.min.css" rel="stylesheet">
     
     <!--The following javscript runs the jquery slideshow -->
