--- a/home.html
+++ b/home.html
@@ -206,10 +206,11 @@
 
 	
     <section class="row mw7 center">
-	    <article class="cf ph3 ph5-ns pv5">
-                    <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="multimedia.html">Multimedia</a></h1>
+	  
+          <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="multimedia.html">Multimedia</a></h1>
+          <article class="cf ph3 ph5-ns pv5">
       <div class="flex flex-column flex-row video-wrapper">
-    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/ZjFDwSWWtYI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/T5R79frmfMw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
            </div>
 	    </article>
     </section>
@@ -256,7 +257,8 @@
     </div>
     </footer>
 <!--end of footer-->
- 
+ </body>
+</html>
 	<!--the following script controls the responsive navigation-->
 	<script>
 	   (function($) { // Begin jQuery
@@ -298,5 +300,4 @@
 	   }
 	}
 	</script>
-</body>
-</html>
+
