--- a/articles.html
+++ b/articles.html
@@ -56,9 +56,7 @@ $('#slider').cycle({});
 <meta name="theme-color" content="#ffffff">
     
 </head>
-
 <body>
-
 <!--beginning of navigation section-->
 <section class="navigation">
 <div class="nav-container">
@@ -94,6 +92,39 @@ $('#slider').cycle({});
     <div class="row">
 <section class="mw7 center ">
     <h1 id="stories" class=no-underline>Articles</h1>
+
+     <article>
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/inside-the-fake-news-forum/">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+          <img src="img/fakenewsforum.jpg" class="db" alt="Left to right: Sargon of Akkad, Milo Yiannopolous, Laura Loomer, and Flecas. Aidan McGloin">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h1 class="f3 lh-title">Conservative speakers clash inside controversial Fake News Panel</h1>
+          <p>
+            The April 26 Fake News Panel discussed propaganda in democracy, Islamophobia and suppressing free speech in the heavily protected Mott Athletic Center. 
+          </p>
+          <p class="f6 lh-copy mv0">March 6, 2018</p>
+        </div>
+      </div>
+    </a>
+     </article>
+     <article>
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/water-conservation-still-important-despite-reduced-drought-conditions/">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+          <img src="img/YearlyPrecipitation.png" class="db" alt="Rainfall is down, but after last year's rain our reservoir is still full">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h1 class="f3 lh-title">Water conservation still important, despite reduced drought conditions</h1>
+          <p>
+            No, San Luis Obispo is not still in a drought, according to the man in charge of Cal Poly’s water. No, that does not mean San Luis Obispo should waste water, he added.
+          </p>
+          <p class="f6 lh-copy mv0">April 19, 2018</p>
+        </div>
+      </div>
+    </a>
+     </article>
         <article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/footage-of-san-luis-obispo-county-jail-inmate-death-prompts-protests/">  
       <div class="flex flex-column flex-row-ns">
@@ -194,7 +225,6 @@ $('#slider').cycle({});
       </div>
     </a>
        </article>
-
  <article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/161777-2/">
       <div class="flex flex-column flex-row-ns">
@@ -257,7 +287,6 @@ $('#slider').cycle({});
     </section>
         </div>
     
-
   
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
 <footer class="tc-l bg-center cover">
