--- a/multimedia.html
+++ b/multimedia.html
@@ -102,7 +102,7 @@ $('#slider').cycle({});
 <h2 id="video">Video</h2>
 <article>
 	  <h3>Sacramento Funding Protest</h3>
-        <p class="no-underline">Around a thousand students and faculty across the entire CSU system went to ask Governor Brown for increased funding April 3. Despite an increase in nominal funds, spending on the system would decrease due to inflation under Brown's budget. The full article has not been published. </p>
+        <p class="no-underline">Around a thousand students and faculty across the entire CSU system went to ask Governor Brown for increased funding April 3. Despite an increase in nominal funds, spending on the system would decrease due to inflation under Brown's budget. </p>
         
 <div class="flex flex-column flex-row video-wrapper">
     <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/wKhfmQN3aSI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
