--- a/home.html
+++ b/home.html
@@ -98,7 +98,7 @@
 					<section class="pt5 pb4">
 						<p class="lh-copy measure f4 mt0">I hope you see how I fit into your workspace. I built this site as a side project after learning CSS and HTML from Brady Teufel at Cal Poly, San Luis Obispo. Components have been borrowed from Tachyons.io, and fancybox3.<br>
 						<br>
-						I am a journalism major at Cal Poly, where I have been writing for the student newspaper for the past two years, taking my own photographs for six months, and using After Effects, Premiere, InDesign, and Illustrator for intermittent stretches of time.<br>
+						I am a journalism major at Cal Poly, where I have written for the student newspaper for past two years and learned photojournalism, After Effects, Premiere, InDesign and Illustrator.<br>
 						<br>
 						I hope you enjoy my work, and that this site shows you what I can contribute to your team.<br>
 						<br>
