--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@ $('#slider').cycle({});
     
 <div class="row">  
     
-<section class="mw7 center ">
+<section class="center">
     <h1 id="stories" class=no-underline>Resume</h1>
 <article class="cf ph3 ph5-ns pv5">
   <header class="fn fl-ns w-50-ns pr4-ns">
