--- a/articles.html
+++ b/articles.html
@@ -90,7 +90,7 @@ $('#slider').cycle({});
     
 <!---The following sets up the media for my stories--->
     <div class="row">
-<section class="mw7 center ">
+<section class="center ">
     <h1 id="stories" class=no-underline>Articles</h1>
      <article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/california-law-prohibits-expulsion-of-former-lambda-chi-alpha-member/">
