--- a/home.html
+++ b/home.html
@@ -82,11 +82,30 @@
 			</nav>
 		</div><!--closing navigation tag-->
 	</section><!--end of navigation section-->
+	  		<br>
+		<br>
+		<br>
+
+  <div class="vh-100 dt w-100 tc bg-dark-gray cover" style="background:url(https://images.fok.al/content/BVPRADmQIgWp?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max) no-repeat center;">
+    <div class="dtc v-mid">
+      <header>
+        <h2 class="f6 fw1 ttu tracked mb2 lh-title covertext"></h2>
+        <h3 class=" lh-title covertext">Aidan McGloin</h3>
+      </header>
+      <h1 class="f1 f-headline-l fw1 i photocover">Portfolio</h1>
+      <blockquote class="ph0 mh0 measure f4 lh-copy center">
+        <p class="fw1 covertext">
+          
+        </p>
+        <cite class="f6 ttu tracked fs-normal covertext"></cite>
+      </blockquote>
+    </div>
+  </div>
+
+
+
+	<br>
 	<div class="topdiv">
-		<br>
-		<br>
-		<br>
-		<br>
 		<!--Full Bleed Background-->
 		<article data-name="article-full-bleed-background">
 			<div class="cf" style="background: url(https://images.fok.al/content/IZJWJgvXBHNV?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max) no-repeat center center fixed; background-size: cover;">
