--- a/home.html
+++ b/home.html
@@ -50,7 +50,6 @@
 
     </head>
     
-    
 <!--beginning of navigation section-->
 <body>
 	<section class="navigation">
@@ -113,6 +112,7 @@
 					<header class="bb pv4">
 						<h2 class="f2 fw7 ttu tracked lh-title mt0 mb3">Welcome to my site</h2>
 						<h4 class="f3 fw4 i lh-title mt0">Writings, photos, videos</h4>
+                        <div class="profilehide"><img class="profilehide" src="https://images.fok.al/content/IZJWJgvXBHNV?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"></div>
 					</header>
 					<section class="pt5 pb4">
 						<p class="lh-copy measure f4 mt0">I hope you see how I fit into your workspace. I built this site as a side project after learning CSS and HTML from Brady Teufel at Cal Poly, San Luis Obispo. Components have been borrowed from Tachyons.io, and fancybox3.<br>
