--- a/home.html
+++ b/home.html
@@ -180,7 +180,7 @@
      </article>
 		<div class="">
 			<h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="photos.html">Photos</a></h1>
-            <article class="photos fl w-100 w-50-m  w-25-ns pa2-ns">
+            <article class=" fl w-100 w-50-m  w-25-ns pa2-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
                 <a data-fancybox="gallery" href="https://images.fok.al/content/oVvBRfWDBDQm?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"><img src="https://images.fok.al/content/oVvBRfWDBDQm?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"></a>
     </div>
@@ -188,7 +188,7 @@
       <p class="caption f6 f5 fw4 mt2">Carrizo Plains | Jan 14, 2018</p>
   </article>
 			
-<article class="photos fl w-100 w-50-m  w-25-ns pa2-ns">
+<article class=" fl w-100 w-50-m  w-25-ns pa2-ns">
     <div class="aspect-ratio aspect-ratio--7x5">
              <a data-fancybox="gallery" href="https://images.fok.al/content/qZcalxiZQIsE?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"><img src="https://images.fok.al/content/qZcalxiZQIsE?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max"></a>
     </div>
@@ -212,7 +212,7 @@
   </article>
 		</div>        
 	</section>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    
 <section class="row mw7 center">
                     <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="resume.html">Resume</a></h1>
         <article class="cf ph3 ph5-ns pv5">
