--- a/home.html
+++ b/home.html
@@ -128,7 +128,7 @@
 		</article>
 	</div>
     <!---The following sets up the media for my stories=-->
-	<section class="row mw7 center">
+	<section class="row center">
         <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="articles.html">Articles</a></h1>
 	<article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/california-law-prohibits-expulsion-of-former-lambda-chi-alpha-member/">
@@ -213,7 +213,7 @@
 		</div>        
 	</section>
     
-<section class="row mw7 center">
+<section class="row center">
                     <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="resume.html">Resume</a></h1>
         <article class="cf ph3 ph5-ns pv5">
   <header class="fn fl-ns w-50-ns pr4-ns">
@@ -239,7 +239,7 @@
     </section>
 
 	
-    <section class="row mw7 center">
+    <section class="row center">
 	  
           <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="multimedia.html">Multimedia</a></h1>
           <article class="cf ph3 ph5-ns pv5">
