--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
 						<a href="photos.html">Photos</a>
 					</li>
 					<li>
-						<a href="resume.html">Resume</a>
+						<a href=".html">Resume</a>
 					</li>
 					<li>
 						<a href="multimedia.html">Multimedia</a>
@@ -212,7 +212,7 @@
   </article>
 		</div>        
 	</section>
-    
+    <br><br><br>
 <section class="row center">
                     <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="resume.html">Resume</a></h1>
         <article class="cf ph3 ph5-ns pv5">
