--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -221,7 +221,7 @@
         <br>
       <header class="vh-100 dt w-100">
     <div 
-      style="background:url(https://static.wixstatic.com/media/f1d57f_ff24e3187f31425e8b9ccf33f37b6757.jpg/v1/fill/w_979,h_651,al_c,q_90,usm_0.66_1.00_0.01/f1d57f_ff24e3187f31425e8b9ccf33f37b6757.webp) no-repeat center right;background-size: cover;" 
+      style="background:url(https://static.wixstatic.com/media/f1d57f_ff24e3187f31425e8b9ccf33f37b6757.jpg/v1/fill/w_979,h_651,al_c,q_90,usm_0.66_1.00_0.01/f1d57f_ff24e3187f31425e8b9ccf33f37b6757.webp) no-repeat center ;background-size: cover;" 
       class="dtc v-mid cover ph3 ph4-m ph5-l">
       <div class="photopagecover"><h1 class="photocover photopagecover f-subheadline-l measure lh-title fw9">
         </h1>
@@ -372,7 +372,7 @@
     </div>
   
 <h1 id="faqs" class="row">Frequently Asked Questions</h1>
-    <article>
+    <article class="row">
     <h3>What do you do in Hammock Club?</h3>
     <p>Hang out! Go on fun adventures, hammock hangouts, hikes, and other cool outdoor activities. We really just love enjoying the outdoors while relaxing in our hammocks.</p>
     <h3>How much does it cost to join? And what do I get out of it?</h3>    
@@ -389,7 +389,9 @@
 	
 <h1 id="hammockmap" class="row">Hammock Map</h1>
     <article><br>
+        <div class="flex flex-column flex-row video-wrapper">
     <iframe class="hammockmap" src="https://www.google.com/maps/d/embed?mid=1-voledbJz-xIfIgmyJ0UnOF0vIU" width="640" height="480"></iframe>
+      </div>
     </article>
 
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
