--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -4,7 +4,7 @@
 <head>
 	<!--The following displays language used in browser to interpret page -->
 	<meta charset="UTF-8"><!--The following line of code displays the page title on a browser tab -->
-	<title>Cal Poly Adventure Club</title><!--link tags are for linking to external files, in this case your CSS stylesheet-->
+	<title>Cal Poly Hammock Club</title><!--link tags are for linking to external files, in this case your CSS stylesheet-->
 	<link href="hammockclub.css" rel="stylesheet" type="text/css"><!--link tags are for linking to external files, in this case a special CSS stylesheet-->
 	<link href="normalize.css" rel="stylesheet" type="text/css"><!--the following tag tells the browser to adjust the site according to screen size-->
 	<meta content="width=device-width, initial-scale=1.0" name="viewport"><!--The following code links to the jquery library -->
