--- a/home.html
+++ b/home.html
@@ -130,6 +130,22 @@
     <!---The following sets up the media for my stories=-->
 	<section class="row center">
         <h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="articles.html">Articles</a></h1>
+	    <article>
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/face-off-over-budget-may-leave-cal-poly-with-limited-funds/">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+          <img src="https://images.fok.al/content/lAKfIZQdELPo?auto=format&dpr=1&fm=pjpg&crop=faces&fit=crop&w=1500&h=1000" class="db" alt="CSU students protested in Sacramento for increased funding in March.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h1 class="f3 lh-title">Face-off over budget may leave Cal Poly with limited funds</h1>
+          <p>
+            Cal Poly faces a budget crisis. Inflation is rising, and the entire California State University System needs more money to combat it. It may not be coming, and the campus may have to cut costs, either in the number of classes offered or in services and grants administration provides.
+          </p>
+          <p class="f6 lh-copy mv0">May 22, 2018</p>
+        </div>
+      </div>
+    </a>
+     </article>
 	<article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/california-law-prohibits-expulsion-of-former-lambda-chi-alpha-member/">
       <div class="flex flex-column flex-row-ns">
@@ -162,22 +178,7 @@
       </div>
     </a>
      </article>
-     <article>
-    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/water-conservation-still-important-despite-reduced-drought-conditions/">
-      <div class="flex flex-column flex-row-ns">
-        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
-          <img src="img/YearlyPrecipitation.png" class="db" alt="Rainfall is down, but after last year's rain our reservoir is still full">
-        </div>
-        <div class="w-100 w-60-ns pl3-ns">
-          <h1 class="f3 lh-title">Water conservation still important, despite reduced drought conditions</h1>
-          <p>
-            No, San Luis Obispo is not still in a drought, according to the man in charge of Cal Poly’s water. No, that does not mean San Luis Obispo should waste water, he added.
-          </p>
-          <p class="f6 lh-copy mv0">April 19, 2018</p>
-        </div>
-      </div>
-    </a>
-     </article>
+
 		<div class="">
 			<h1 class="no-underline" id="stories"><a class="h1link no-underline dim" href="photos.html">Photos</a></h1>
             <article class=" fl w-100 w-50-m  w-25-ns pa2-ns">
