--- a/articles.html
+++ b/articles.html
@@ -92,6 +92,22 @@ $('#slider').cycle({});
     <div class="row">
 <section class="center ">
     <h1 id="stories" class=no-underline>Articles</h1>
+		    <article>
+    <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/face-off-over-budget-may-leave-cal-poly-with-limited-funds/">
+      <div class="flex flex-column flex-row-ns">
+        <div class="pr3-ns mb4 mb0-ns w-100 w-40-ns">
+          <img src="https://images.fok.al/content/lAKfIZQdELPo?auto=format&dpr=1&fm=pjpg&crop=faces&fit=crop&w=1500&h=1000" class="db" alt="CSU students protested in Sacramento for increased funding in March.">
+        </div>
+        <div class="w-100 w-60-ns pl3-ns">
+          <h1 class="f3 lh-title">Face-off over budget may leave Cal Poly with limited funds</h1>
+          <p>
+            Cal Poly faces a budget crisis. Inflation is rising, and the entire California State University System needs more money to combat it. It may not be coming, and the campus may have to cut costs, either in the number of classes offered or in services and grants administration provides.
+          </p>
+          <p class="f6 lh-copy mv0">May 22, 2018</p>
+        </div>
+      </div>
+    </a>
+     </article>
      <article>
     <a class="db pv4 ph3 ph0-l no-underline grey dim" href="http://mustangnews.net/california-law-prohibits-expulsion-of-former-lambda-chi-alpha-member/">
       <div class="flex flex-column flex-row-ns">
