--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -130,13 +130,13 @@
          <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
     <img src="http://tachyons.io/img/avatar_1.jpg" class="br-100" title="Photo of a kitty staring at you">
-    <h1 class="f4">Mimi Whitehouse</h1>
+    <h1 class="f4">Kevin Foltz</h1>
+	  <h3>Treasurer>
     <hr class="mw3 bb ">
   </div>
+		
   <p class="lh-copy measure center f6">
-    Quite affectionate and outgoing.
-    She loves to get chin scratches and will
-    roll around on the floor waiting for you give her more of them.
+    Hey guys, my name is Kevin! I am currently the treasurer for Hammock Club. In my spare time I love to hammock (obviously), hike, play board games and play unhealthy amounts of Mario Kart. I joined Hammock Club my freshman year. What I love about hammock club is the ability to meet so many people who love the outdoors and hammocks as much as I do. My favorite Hammock Club trip to date has to be our Big Sur backpacking trip up to Cone Peak and my favorite spot to hammock in SLO is the eucalyptus grove in MDO!
   </p>
 </div>
              <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
