--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -129,9 +129,9 @@
 </div>
          <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
-    <img src="http://tachyons.io/img/avatar_1.jpg" class="br-100" title="Photo of a kitty staring at you">
+    <img src="img/kevin.jpg" class="br-100" title="Photo of a kitty staring at you">
     <h1 class="f4">Kevin Foltz</h1>
-	  <h3>Treasurer>
+	  <h4>Treasurer</h4>
     <hr class="mw3 bb ">
   </div>
 		
