--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -103,7 +103,28 @@
                         <div class="profilehide"><img class="profilehide" src="https://static.wixstatic.com/media/f1d57f_7325f68979db480faaf3b9d52d4033f7.jpg/v1/fill/w_988,h_636,al_c,q_90,usm_0.66_1.00_0.01/f1d57f_7325f68979db480faaf3b9d52d4033f7.webp"></div>
 					</header>
 					<section class="pt5 pb4">
-						<p class="lh-copy measure f4 mt0">Cal Poly Hammock Club is an outdoor adventure club with an emphasis on hammocks for any student who is interested. We do our best to try and provide fun hammock gatherings, hikes, camping trips and a great atmosphere that all can enjoy.<br><br>We do hikes, bonfires, camping trips, and hammocking sessions.<br><br>We also make friends, with each other, and with you.<br><br>If you have had a thrill for adventures and hangouts, and overall hanging a great time in the outdoors, then you should come on trips. Bring a friend, but you don't have to.</p>
+						<p class="lh-copy measure f4 mt0">Cal Poly Hammock Club is an outdoor adventure club with an emphasis on hammocks for any student who is interested. We do our best and provide fun hammock gatherings, hikes, camping trips and a great atmosphere that all can enjoy.<br><br>We do hikes, bonfires, camping trips, and hammocking sessions.<br><br>We also make friends, with each other, and with you.<br><br>If you have had a thrill for adventures and hangouts, and overall hanging a great time in the outdoors, then you should come on trips. We even have hammocks for you to use.</p>
+                        
+                        <!-- Begin MailChimp Signup Form -->
+
+<style type="text/css">
+	#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
+	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://facebook.us10.list-manage.com/subscribe/post?u=7aa6c79ef871f98bfb458889e&amp;id=e6b89ecb32" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Keep in touch!</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7aa6c79ef871f98bfb458889e_e6b89ecb32" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
 					</section>
 				</div>
 			</div>
@@ -128,7 +149,7 @@
   <div class="tc">
     <img src="img/sam-2.jpg" class="br-100" title="Photo of Sam Nelson">
     <h1 class="f4">Sam Nelson</h1>
-      <h4>Officer</h4>
+      <h4>Outreach Coordinator</h4>
     <hr class="mw3 bb ">
   </div>
   <p class="lh-copy measure center f6">
@@ -161,50 +182,54 @@
 </div>
              <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
-    <img src="http://tachyons.io/img/avatar_1.jpg" class="br-100" title="Photo of a kitty staring at you">
-    <h1 class="f4">Mimi Whitehouse</h1>
+    <img src="img/quinn.jpg" class="br-100" title="Photo of a kitty staring at you">
+    <h1 class="f4">Quinn Porter</h1>
+      <h4>Event Coordinator</h4>
     <hr class="mw3 bb ">
   </div>
   <p class="lh-copy measure center f6">
-    Quite affectionate and outgoing.
-    She loves to get chin scratches and will
-    roll around on the floor waiting for you give her more of them.
+I am a second year Architectural Engineer and I am the youngest board member for CPHC, so I have yet to but chug hot coffee. I got into naturing through becoming an Eagle Scout, and going on epic backpacking trips with my mommy. My favorite outdoor activities are surfing, backpacking, and trail running. I pride myself on being okay at a lot of things instead of really good at one. My favorite place in the entire world is high country Yosemite. Feel free to hit me you if you want a ride to go surf or hike. To me hammock club is where I found my community of fellow nature enthusiasts who are always down to have a good time and maybe get a little sendy with it.
   </p>
 </div>
            <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
-    <img src="http://tachyons.io/img/avatar_1.jpg" class="br-100 " title="Photo of a kitty staring at you">
-    <h1 class="f4">Mimi Whitehouse</h1>
+    <img src="img/rialda.jpg" class="br-100 " title="Photo of Rialda">
+    <h1 class="f4">Rialda Mustic</h1>
+      <h4>Social Media Lady</h4>
     <hr class="mw3 bb ">
   </div>
   <p class="lh-copy measure center f6">
-    Quite affectionate and outgoing.
-    She loves to get chin scratches and will
-    roll around on the floor waiting for you give her more of them.
+    My name is Rialda Mustic, but I can also go by Ri, RiRi, or RiRi Bad Girl HA :-) 
+	  I was born and raised in St. Louis, Missouri and eventually ventured west to start college. 
+	  That's where I stumbled upon the infamous Cal Poly Hammock Club. 
+	  Not only has this club brought me to some of my closest friends, 
+	  it has provided me with irreplaceable experiences and memories that will resonate with me eternally!!
+	  MUCH LOVE! I'm an Environmental Earth and Soil Sciences major here at Cal Poly and am pursuing a theatre minor as well.
+	  When I am not hammocking, I love to draw, watch movies, listen to oh so groovy muSICK, and adventure off with my pals 
+	  exploring new cities and lands. If you ever see me around campus come say hi, or hit me up to go on a hike. 
+	  I MIGHT even show you my secret talent hehe. NICE MEETING YOU, okee bye!
   </p>
 </div>  
                    <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
-    <img src="http://tachyons.io/img/avatar_1.jpg" class="br-100" title="Photo of a kitty staring at you">
-    <h1 class="f4">Mimi Whitehouse</h1>
+    <img src="img/alexis.jpg" class="br-100" title="Photo of Alexis">
+    <h1 class="f4">Alexis Rousek</h1>
+      <h4>Hammock Keeper</h4>
     <hr class="mw3 bb ">
   </div>
   <p class="lh-copy measure center f6">
-    Quite affectionate and outgoing.
-    She loves to get chin scratches and will
-    roll around on the floor waiting for you give her more of them.
+I am a fourth-year Biology student and I have been a member of Hammock Club since I joined back in 2015 during my freshman year. I love any outdoor activity especially backpacking, hammock camping, and hanging out with my rabbit Louis. I was born and raised in Mammoth Lakes, CA and am obsessed with mountains, biology, traveling, and cheese. Let’s go for a hike sometime! :)
   </p>
 </div>
                    <div class="profilecard mw5 center br3 pa3 pa4-ns mv3">
   <div class="tc">
-    <img src="http://tachyons.io/img/avatar_1.jpg" class="br-100" title="Photo of a kitty staring at you">
-    <h1 class="f4">Mimi Whitehouse</h1>
+    <img src="img/louis.jpg" class="br-100" title="Photo of a rabbit">
+    <h1 class="f4">Louis</h1>
+      <h4>Mascot</h4>
     <hr class="mw3 bb ">
   </div>
   <p class="lh-copy measure center f6">
-    Quite affectionate and outgoing.
-    She loves to get chin scratches and will
-    roll around on the floor waiting for you give her more of them.
+Louis is an incredible young boi that always is stoked to hang with you. He has climbed the seven summits, and won the 2017 All American Windsuring and Ping Pong tournaments. Consumes carrots on the daily. Really good eyesight. Uses said eyesight to watch Game of Thrones.
   </p>
 </div>
         </article>
@@ -389,6 +414,8 @@
     <iframe class="hammockmap" src="https://www.google.com/maps/d/embed?mid=1-voledbJz-xIfIgmyJ0UnOF0vIU" width="640" height="480"></iframe>
       </div>
     </article>
+    
+
 
 <!--Footer-- SVG Icons are from https://simpleicons.org -->
 <footer>
