--- a/HammockClub/index.html
+++ b/HammockClub/index.html
@@ -37,13 +37,15 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.2.5/jquery.fancybox.min.js"></script>     
  <!---The following sets up the favicons--->
-<link rel="apple-touch-icon" sizes="180x180" href="img/favaclub/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="img/favaclub/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="img/favaclub/favicon-16x16.png">
-<link rel="manifest" href="img/favaclub/site.webmanifest">
-<link rel="mask-icon" href="img/favaclub/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+<link rel="manifest" href="img/fav/site.webmanifest">
+<link rel="mask-icon" href="img/fav/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+
+
  
     
     </head>
