--- a/photos.html
+++ b/photos.html
@@ -69,7 +69,7 @@
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
         <li>
-          <a href="home.html">Home</a>
+          <a href="aidanmcgloin.com">Home</a>
         </li>
 	   <li>
           <a href="articles.html">Articles</a>
