--- a/multimedia.html
+++ b/multimedia.html
@@ -76,7 +76,7 @@ $('#slider').cycle({});
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
         <li>
-          <a href="aidancmcgloin.com">Home</a>
+          <a href="home.html">Home</a>
         </li>
 	   <li>
           <a href="articles.html">Articles</a>
