--- a/home.html
+++ b/home.html
@@ -63,19 +63,19 @@
 				</div>
 				<ul class="nav-list">
 					<li>
-						<a href="home.html">Home</a>
+						<a href="home">Home</a>
 					</li>
 					<li>
-						<a href="articles.html">Articles</a>
+						<a href="articles">Articles</a>
 					</li>
 					<li>
-						<a href="photos.html">Photos</a>
+						<a href="photos">Photos</a>
 					</li>
 					<li>
-						<a href=".html">Resume</a>
+						<a href="resume">Resume</a>
 					</li>
 					<li>
-						<a href="multimedia.html">Multimedia</a>
+						<a href="multimedia">Multimedia</a>
 					</li>
 				</ul>
 			</nav>
