--- a/resume.html
+++ b/resume.html
@@ -65,19 +65,19 @@ $('#slider').cycle({});
 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
   <ul class="nav-list">
         <li>
-          <a href="home.html">Home</a>
+          <a href="/">Home</a>
         </li>
 	   <li>
-          <a href="articles.html">Articles</a>
+          <a href="articles">Articles</a>
 		  </li>
 	  	<li>
-          <a href="photos.html">Photos</a>
+          <a href="photos">Photos</a>
         </li>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="resume">Resume</a>
 			</li>
         <li>
-          <a href="multimedia.html">Multimedia</a>
+          <a href="multimedia">Multimedia</a>
         </li>
       </ul>
 </nav>
